# intel-8080-kit

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: lib.rs  op.rs
src/asm/: lexer.rs  mod.rs
src/dis/: mod.rs
src/emu/: mod.rs
tests/: basic.asm  conv.rs  loop.asm  mult.asm  mult.rs  over.rs
util/: gen.py
utils/: gen.py  opcodes.txt
